working through array and string problems

--- a/Ch. 1/Interview Questions.ipynb
+++ b/Ch. 1/Interview Questions.ipynb
@@ -632,11 +632,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes try to think about it as if you were going to do it by hand, think cleverly and try to explain the problem to a layman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.5 One Away: Correct\n",
+    "There are three types of edits that can be performed on strings: insert a character, remove a character, or replace a character. Given two strings, write a function to check if they are one edit (or zero edits) away.\n",
+    "\n",
+    "\n",
+    "EXAMPLE\n",
+    "- pale, pIe -> true \n",
+    "- pales, pale -> true \n",
+    "- pale, bale -> true \n",
+    "- pale, bake -> false"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Brute force: write a function for each edit, run through each combination of edit to \n",
+    "#see if it matches any of the strings\n",
+    "\n",
+    "\n",
+    "#Check if there was more than one character difference using hashtable count\n",
+    "def one_away(string1 : str, string2 : str) -> bool:\n",
+    "    \n",
+    "    if string1 == string2:\n",
+    "        return True \n",
+    "    \n",
+    "    if (len(string1) - len(string2)) > 1:\n",
+    "        return False \n",
+    "    \n",
+    "    \n",
+    "    num_difference = 0\n",
+    "    \n",
+    "    count_1 = {char:0 for char in string1}\n",
+    "    count_2= {char:0 for char in string2}\n",
+    "    \n",
+    "    for char in string1:\n",
+    "        count_1[char] += 1\n",
+    "\n",
+    "    for char in string2:\n",
+    "        count_2[char] += 1\n",
+    "        \n",
+    "    duplicate_letter = ''\n",
+    "    for char in string1:\n",
+    "        #if not in the table, increase difference\n",
+    "        if char not in count_2:\n",
+    "            num_difference += 1  \n",
+    "        #if count of letters do not equal, increase difference \n",
+    "        elif count_1[char] != count_2[char] and char != duplicate_letter:\n",
+    "            duplicate_letter = char\n",
+    "            num_difference += 1  \n",
+    "\n",
+    "\n",
+    "    value = { k : count_2[k] for k in set(count_2) - set(count_1) }\n",
+    "    if len(value) != 0:\n",
+    "        num_difference += 1\n",
+    "        \n",
+    " \n",
+    "    if num_difference > 1:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test1 = \"pala\"\n",
+    "test2 = \"pales\"\n",
+    "\n",
+    "one_away(test1,test2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note: \n",
+    "### Try to think about edge cases while you writing the code, don't just commit and start testing after your write the code and using trail and error to create your algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.6 String Compression: Correct\n",
+    "Implement a method to perform basic string compression using the counts of repeated characters. For example, the string aabcccccaaa would become a2b1c5a3. If the \"compressed\" string would not become smaller than the original string, your method should return the original string. You can assume the string has only uppercase and lowercase letters (a - z)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def str_compress(string : str) -> str:\n",
+    "    \n",
+    "    string_list = list(string)\n",
+    "    compressed_list = [string_list[0]]\n",
+    "   \n",
+    "    \n",
+    "    letter_count = 1\n",
+    "    \n",
+    "    for index in range(1,len(string)):        \n",
+    "        \n",
+    "        \n",
+    "        if index == len(string) - 1:\n",
+    "            if string_list[index] == string_list[index-1]:\n",
+    "                letter_count += 1\n",
+    "            else:\n",
+    "                compressed_list.append(string_list[index])\n",
+    "                letter_count = 1\n",
+    "            compressed_list.append(str(letter_count))\n",
+    "    \n",
+    "        elif string_list[index] == string_list[index-1]:\n",
+    "            letter_count += 1\n",
+    "        else:\n",
+    "            compressed_list.append(str(letter_count))\n",
+    "            compressed_list.append(string_list[index])\n",
+    "            letter_count = 1\n",
+    "            \n",
+    "    compressed_str = ''.join(compressed_list)\n",
+    "            \n",
+    "    if len(compressed_str) > len(string):\n",
+    "        return string\n",
+    "            \n",
+    "    return compressed_str\n",
+    "  \n",
+    "    \n",
+    "#Correct answer more neat clean code\n",
+    "def str_compress_correct(string : str) -> str:\n",
+    "    \n",
+    "    string_list = list(string)\n",
+    "    compressed_list = []\n",
+    "   \n",
+    "    \n",
+    "    letter_count = 0\n",
+    "    \n",
+    "    for index in range(0,len(string)):        \n",
+    "        letter_count += 1\n",
+    "        \n",
+    "        if (index + 1 >= len(string) or string_list[index] != string_list[index + 1]):\n",
+    "            compressed_list.append(string_list[index])\n",
+    "            compressed_list.append( str(letter_count));\n",
+    "            letter_count = 0\n",
+    "    \n",
+    "    compressed_str = ''.join(compressed_list)\n",
+    "    if len(compressed_str) > len(string):\n",
+    "        return string\n",
+    "            \n",
+    "    return compressed_str\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a2b1c5a4'"
+      ]
+     },
+     "execution_count": 464,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = \"aabcccccaaaa\"\n",
+    "\n",
+    "str_compress_correct(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 465,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a3b2ca1'"
+      ]
+     },
+     "execution_count": 465,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = \"aaabbcca\"\n",
+    "\n",
+    "str_compress(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note\n",
+    "\n",
+    "### Concating to a string can take O(n^2) so first append to an array then at the end convert to a string"
+   ]
   },
   {
    "cell_type": "code",
