completed array and string problems

--- a/Ch. 1/Interview Questions.ipynb
+++ b/Ch. 1/Interview Questions.ipynb
@@ -868,6 +868,350 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.7 Rotate Matrix: Failed\n",
+    "Given an image represented by an NxN matrix, where each pixel in the image is \n",
+    "4 bytes, write a method to rotate the image by 90 degrees. (can you do this in place?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 682,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate_matrix(matrix : list) -> list:\n",
+    "    N = len(matrix[0])-1\n",
+    "    rot_matrix = [[0]*(N+1)]*(N+1)\n",
+    "\n",
+    "    top = matrix[0][:]\n",
+    "    bot = matrix[N][:]\n",
+    "    right = [0] * 3\n",
+    "    left = [0] * 3\n",
+    "    \n",
+    "    for i in range(0,len(matrix)):\n",
+    "        for j in range(0,len(matrix[0])):\n",
+    "            if j == 0:\n",
+    "                left[i] = matrix[i][j]\n",
+    "#                 rot_matrix[i][j] = bot[i]\n",
+    "                \n",
+    "            if j == N:\n",
+    "                right[i] = matrix[i][j]\n",
+    "#                 rot_matrix[i][j] = top[i]\n",
+    "            \n",
+    "            \n",
+    "    for i in range(0,len(matrix)):\n",
+    "        for j in range(0,len(matrix[0])): \n",
+    "    \n",
+    "            #left -> top\n",
+    "            \n",
+    "#             if i == 0:\n",
+    "            rot_matrix[i][j] = left[N-j]\n",
+    "             #right -> bot\n",
+    "#            \n",
+    "            \n",
+    "            \n",
+    "#             rot_matrix[N][j] = right[i]\n",
+    "            \n",
+    "                 \n",
+    "#     print(matrix[len(matrix)-1][2])\n",
+    "    print(rot_matrix)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# correct answer\n",
+    "def rotate_matrix_correct(mat):\n",
+    "    N = len(mat[0])\n",
+    "      \n",
+    "    # Consider all squares one by one \n",
+    "    for x in range(0, int(N / 2)): \n",
+    "          \n",
+    "        # Consider elements in group    \n",
+    "        # of 4 in current square \n",
+    "        for y in range(x, N-x-1): \n",
+    "              \n",
+    "            # store current cell in temp variable \n",
+    "            temp = mat[x][y] \n",
+    "            \n",
+    "            #store value from left to top\n",
+    "            mat[x][y] = mat[N-1-y][x]\n",
+    "            \n",
+    "            #store value from bottom to left\n",
+    "            mat[N-1-y][x] = mat[N-1-x][N-1-y]\n",
+    "            \n",
+    "            #store value from right to bottom\n",
+    "            mat[N-1-x][N-1-y] = mat[y][N-x-1]\n",
+    "            \n",
+    "            #store value from top to right\n",
+    "            mat[y][N-x-1] = temp\n",
+    "            \n",
+    "  \n",
+    "    \n",
+    "    print(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 683,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7, 4, 1], [8, 5, 2], [9, 6, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [[1,2,3],\n",
+    "        [4,5,6],\n",
+    "        [7,8,9]]\n",
+    "\n",
+    "goal = [[7,4,1],\n",
+    "        [8,5,2],\n",
+    "        [9,6,3]]\n",
+    "\n",
+    "goal = [[7,4,1],[8,5,2],[9,6,3]]\n",
+    "\n",
+    "rotate_matrix_correct(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 684,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13, 9, 5, 1], [14, 10, 6, 2], [15, 11, 7, 3], [16, 12, 8, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [ [1, 2, 3, 4 ], \n",
+    "        [5, 6, 7, 8 ], \n",
+    "        [9, 10, 11, 12 ], \n",
+    "        [13, 14, 15, 16 ] ] \n",
+    "\n",
+    "rotate_matrix_correct(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "\n",
+    "That was fucking hard, use pen and paper to figure out pattern and movement "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.8 Zero Matrix: Correct\n",
+    "Write an algorithm such that if an element in an MxN matrix is 0, its entire row and column are set to O."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 764,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Can more than one element be zero? Yes\n",
+    "\n",
+    "#after hint 1\n",
+    "def zero_matrix(matrix):\n",
+    "    \n",
+    "    i_zero = []\n",
+    "    j_zero = []\n",
+    "    \n",
+    "    for i in range(0,len(matrix)):\n",
+    "        for j in range(0,len(matrix[i])):\n",
+    "            if matrix[i][j] == 0:\n",
+    "                i_zero.append(i)\n",
+    "                j_zero.append(j)\n",
+    "\n",
+    "    \n",
+    "    if len(i_zero) > 0:\n",
+    "        \n",
+    "        for i_index in i_zero:\n",
+    "            #set entire row to 0\n",
+    "            matrix[i_index] = [0] * len(matrix)\n",
+    "        \n",
+    "        #set entire col to 0\n",
+    "        for i in range(0,len(matrix)):\n",
+    "            for j in range(0,len(matrix[i])):\n",
+    "                if j in j_zero:\n",
+    "                    matrix[i][j] = 0\n",
+    "    return matrix\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 767,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [[0, 2, 3, 4 ], \n",
+    "        [5, 0, 7, 8 ], \n",
+    "        [5, 10, 0, 12 ], \n",
+    "        [13, 14, 15, 16 ] ] \n",
+    "\n",
+    "# test = [[1, 2], \n",
+    "#         [0, 5]] \n",
+    "\n",
+    "zero_matrix_optimized(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note \n",
+    "#### think about space complexity in addition to time "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.9 String Rotation: Correct\n",
+    "Assume you have a method isSubstring which checks if one word is a substring of another. Given two strings, s1 and s2, write code to check if s2 is a rotation of s1 using only one call to isSubstring (e.g.,\"waterbottle\"is a rotation of\"erbottlewat\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 871,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def string_rot(string1: str, string2: str) -> bool:\n",
+    "    \n",
+    "    string1_list = list(string1)\n",
+    "    string2_list = list(string2)\n",
+    "    \n",
+    "    \n",
+    "    if len(string1) != len(string2):\n",
+    "        return False\n",
+    "    \n",
+    "    rotation_point = 0\n",
+    "    \n",
+    "    index_same = []\n",
+    "    \n",
+    "    for char in string1:\n",
+    "        for index in range(0,len(string2)):\n",
+    "            if char == string2_list[index]:\n",
+    "                index_same.append(index)\n",
+    "\n",
+    "    \n",
+    "    rot_string2_list = string2_list[index_same[0]:] + string2_list[:index_same[0]]\n",
+    "    \n",
+    "    if rot_string2_list == string1_list:\n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    \n",
+    "#Correct answer that is smarter \n",
+    "\n",
+    "string1 + string1 = waterbottlewaterbottle\n",
+    "\n",
+    "string2 = erbottlewat\n",
+    "\n",
+    "so just:\n",
+    "    \n",
+    "if isSubstring(string1+string1, string2):\n",
+    "    return True\n",
+    "else:\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 876,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 876,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"waterbottle\"\n",
+    "str2 = \"erbottlewat\"\n",
+    "\n",
+    "string_rot(str1,str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 875,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 875,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"hillers\"\n",
+    "str2 = \"erhill\"\n",
+    "\n",
+    "string_rot(str1,str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 874,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 874,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"eliot\"\n",
+    "str2 = \"iotel\"\n",
+    "\n",
+    "string_rot(str1,str2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
