finished 5 ch 3 problems

--- a/Ch. 3 Stacks and Queues /Interview Problems.ipynb
+++ b/Ch. 3 Stacks and Queues /Interview Problems.ipynb
@@ -166,7 +166,7 @@
     "test_stack.push(6)\n",
     "test_stack.push(7)\n",
     "test_stack.push(2)\n",
-    "test_stack.push(8)\n",
+    "test_stack.push(2)\n",
     "\n",
     "\n",
     "\n",
@@ -317,9 +317,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.4 Queue via Stacks:\n",
+    "# 3.4 Queue via Stacks: Correct but needed Hints\n",
     "Implement a MyQueue class which implements a queue using two stacks."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approaches after Hint 2\n",
+    "- One stack that pops all elements to another stack until first element is found in the first stack, then fully pop this first element, then add all other elements back to first stack\n",
+    "\n",
+    "## Another Approach -- Invalid \n",
+    "- Main stack on stores the earliest value\n",
+    "- Storage stack stores all other values\n",
+    "\n",
+    "- Every time a value is pushed to queue, it goes into storage stack\n",
+    "- When pop happens, pop only value in main stack, then push earliest value in storage stack onto main stack and remove from storage stack\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue:\n",
+    "    def __init__(self):\n",
+    "        self.queue = []\n",
+    "        self.main_stack = []\n",
+    "        self.storage_stack = []\n",
+    "        \n",
+    "    def push(self,value):\n",
+    "        self.main_stack.append(value)\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        \n",
+    "        #find earliest element in main stack by removing all elements until you get to first one\n",
+    "        while len(self.main_stack) > 1:\n",
+    "            popped_element = self.main_stack.pop()\n",
+    "            self.storage_stack.append(popped_element)\n",
+    "        earliest_element = self.main_stack.pop()\n",
+    "        \n",
+    "        print(\"Storage Stack: \",self.storage_stack)\n",
+    "        #re add all elements to main stack from storage stack, clear storage stack\n",
+    "        while len(self.storage_stack) > 0:\n",
+    "            popped_element = self.storage_stack.pop()\n",
+    "            self.main_stack.append(popped_element)\n",
+    "        print(\"Earliest: \",earliest_element)\n",
+    "        print(\"Main Stack: \",self.main_stack)\n",
+    "        \n",
+    "       \n",
+    "        \n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Storage Stack:  [5, 4, 3, 2]\n",
+      "Earliest:  1\n",
+      "Main Stack:  [2, 3, 4, 5]\n",
+      "Storage Stack:  [5, 4, 3]\n",
+      "Earliest:  2\n",
+      "Main Stack:  [3, 4, 5]\n",
+      "Storage Stack:  [7, 6, 5, 4]\n",
+      "Earliest:  3\n",
+      "Main Stack:  [4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_queue = MyQueue()\n",
+    "\n",
+    "test_queue.push(1)\n",
+    "test_queue.push(2)\n",
+    "test_queue.push(3)\n",
+    "test_queue.push(4)\n",
+    "test_queue.push(5)\n",
+    "\n",
+    "\n",
+    "test_queue.pop()\n",
+    "test_queue.pop()\n",
+    "\n",
+    "test_queue.push(6)\n",
+    "test_queue.push(7)\n",
+    "\n",
+    "test_queue.pop()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.5 Sort Stack: \n",
+    "Write a program to sort a stack such that the smallest items are on the top. You can use an additional temporary stack, but you may not copy the elements into any other data structure (such as an array). The stack supports the following operations: push, pop, peek, and isEmpty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 479,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self,value):\n",
+    "        self.value = value\n",
+    "\n",
+    "class Stack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.stack_list = []\n",
+    "\n",
+    "    def push(self, value):\n",
+    "        '''Push element to the top of stack'''\n",
+    "        new_node = Node(value)\n",
+    "        self.stack_list.append(new_node)\n",
+    "        \n",
+    "    def stack_pop(self):\n",
+    "        if self.isEmpty() == True:\n",
+    "            print(\"No element in the Stack\")\n",
+    "            return \n",
+    "        else:\n",
+    "            return self.stack_list.pop()\n",
+    "            \n",
+    "\n",
+    "    def peek(self): \n",
+    "        '''Return top element of the stack'''\n",
+    "        \n",
+    "        return self.stack_list[-1]\n",
+    "    \n",
+    "    def isEmpty(self): \n",
+    "        '''Return False if stack is not empty'''\n",
+    "        if len(self.stack_list) == 0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def printStack(self): \n",
+    "        '''Print all elements of the stack'''\n",
+    "        for element in self.stack_list:\n",
+    "            print(element.value)\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 638,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sortStack(stack):\n",
+    "\n",
+    "    sortedStack = Stack()\n",
+    "   \n",
+    "    first_value = stack.stack_pop().value\n",
+    "    sortedStack.push(first_value)\n",
+    "\n",
+    "    while stack.isEmpty() != True:\n",
+    "\n",
+    "       \n",
+    "       \n",
+    "        \n",
+    "\n",
+    "        if stack.peek().value < sortedStack.peek().value:\n",
+    "          \n",
+    "            higher_value = sortedStack.stack_pop().value\n",
+    "            lower_value = stack.stack_pop().value\n",
+    "\n",
+    "            stack.push(higher_value)\n",
+    "            sortedStack.push(lower_value)\n",
+    "        \n",
+    "        if stack.peek().value >= sortedStack.peek().value:\n",
+    "            higher_value = stack.stack_pop().value\n",
+    "            sortedStack.push(higher_value)\n",
+    "           \n",
+    "            \n",
+    "    \n",
+    "\n",
+    "    return sortedStack\n",
+    "    \n",
+    "   \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 639,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_stack = Stack()\n",
+    "\n",
+    "test_stack.push(6)\n",
+    "test_stack.push(4)\n",
+    "test_stack.push(2)\n",
+    "test_stack.push(1)\n",
+    "test_stack.push(3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "sortedStack = sortStack(test_stack)\n",
+    "sortedStack.printStack()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
