--- a/Ch. 3 Stacks and Queues /Interview Problems.ipynb
+++ b/Ch. 3 Stacks and Queues /Interview Problems.ipynb
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.5 Sort Stack: \n",
+    "# 3.5 Sort Stack: Correct but took too long\n",
     "Write a program to sort a stack such that the smallest items are on the top. You can use an additional temporary stack, but you may not copy the elements into any other data structure (such as an array). The stack supports the following operations: push, pop, peek, and isEmpty."
    ]
   },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 666,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,10 +484,6 @@
     "\n",
     "    while stack.isEmpty() != True:\n",
     "\n",
-    "       \n",
-    "       \n",
-    "        \n",
-    "\n",
     "        if stack.peek().value < sortedStack.peek().value:\n",
     "          \n",
     "            higher_value = sortedStack.stack_pop().value\n",
@@ -496,9 +492,11 @@
     "            stack.push(higher_value)\n",
     "            sortedStack.push(lower_value)\n",
     "        \n",
-    "        if stack.peek().value >= sortedStack.peek().value:\n",
+    "        if stack.peek().value > sortedStack.peek().value:\n",
     "            higher_value = stack.stack_pop().value\n",
     "            sortedStack.push(higher_value)\n",
+    "        \n",
+    "\n",
     "           \n",
     "            \n",
     "    \n",
@@ -511,14 +509,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 667,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "2\n",
       "3\n",
       "4\n",
@@ -532,7 +529,6 @@
     "test_stack.push(6)\n",
     "test_stack.push(4)\n",
     "test_stack.push(2)\n",
-    "test_stack.push(1)\n",
     "test_stack.push(3)\n",
     "\n",
     "\n",
@@ -543,11 +539,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.6 Animal Shelter: Correct but solution uses a only a dog queue and a cat queue and has timestamp for each animal \n",
+    "An animal shelter, which holds only dogs and cats, operates on a strictly\"first in, first out\" basis. People must adopt either the \"oldest\" (based on arrival time) of all animals at the shelter, or they can select whether they would prefer a dog or a cat (and will receive the oldest animal of that type). They cannot select which specific animal they would like. Create the data structures to maintain this system and implement operations such as enqueue, dequeueAny, dequeueDog, and dequeueCat. You may use the built-in Linked List data structure."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self,name,animal_type):\n",
+    "        self.animal_type = animal_type\n",
+    "        self.name = name\n",
+    "\n",
+    "class AnimalShelterQueue:\n",
+    "    def __init__(self):\n",
+    "        self. all_queue = []\n",
+    "        self.dog_queue = []\n",
+    "        self.cat_queue = []\n",
+    "    \n",
+    "    def enqueue(self,name,animal_type):\n",
+    "        \n",
+    "        new_animal = Animal(name,animal_type)\n",
+    "        \n",
+    "        #add animal to all queue \n",
+    "        self.all_queue.append(new_animal)\n",
+    "        \n",
+    "        #add animal to specific queue\n",
+    "        if new_animal.animal_type == 'dog':\n",
+    "            self.dog_queue.append(new_animal)\n",
+    "        if new_animal.animal_type == 'cat':\n",
+    "            self.cat_queue.append(new_animal)\n",
+    "            \n",
+    "    def dequeueAny(self):\n",
+    "        popped_animal = self.all_queue.pop(0)\n",
+    "        if popped_animal.animal_type == 'dog':\n",
+    "            self.dog_queue.pop(0)\n",
+    "        if popped_animal.animal_type == 'cat':\n",
+    "            self.cat_queue.pop(0)\n",
+    "        return popped_animal\n",
+    "        \n",
+    "    \n",
+    "    def dequeueDog(self):\n",
+    "        self.all_queue.pop(0)\n",
+    "        return self.dog_queue.pop(0)\n",
+    "    \n",
+    "    def dequeueCat(self):\n",
+    "        self.all_queue.pop(0)\n",
+    "        return self.cat_queue.pop(0)\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 712,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat_1\n",
+      "dog_1\n",
+      "dog_2\n",
+      "cat_2\n",
+      "dog_3\n"
+     ]
+    }
+   ],
+   "source": [
+    "animal_queue = AnimalShelterQueue()\n",
+    "\n",
+    "animal_queue.enqueue(\"cat_1\",\"cat\")\n",
+    "animal_queue.enqueue(\"dog_1\",\"dog\")\n",
+    "animal_queue.enqueue(\"dog_2\",\"dog\")\n",
+    "animal_queue.enqueue(\"cat_2\",\"cat\")\n",
+    "animal_queue.enqueue(\"dog_3\",\"dog\")\n",
+    "\n",
+    "\n",
+    "print(animal_queue.dequeueAny().name)\n",
+    "print(animal_queue.dequeueAny().name)\n",
+    "print(animal_queue.dequeueAny().name)\n",
+    "print(animal_queue.dequeueAny().name)\n",
+    "print(animal_queue.dequeueCat().name)\n",
+    "print(animal_queue.dequeueDog().name)\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
