working through ch 4

--- a/Ch. 4 Trees and Graphs/Interview Problems.ipynb
+++ b/Ch. 4 Trees and Graphs/Interview Problems.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -117,37 +117,25 @@
      "output_type": "stream",
      "text": [
       "Vertex Exist!\n",
-      "Vertex Exist!\n",
-      "Neighbor Exist!\n",
       "\n",
       "1  :  False\n",
       "-----> 2  :  True\n",
       "-----> 3  :  False\n",
       "2  :  True\n",
-      "-----> 3  :  False\n",
       "3  :  False\n",
       "-----> 4  :  False\n",
       "-----> 5  :  False\n",
       "\n",
-      "1  :  False\n",
-      "-----> 2  :  True\n",
-      "-----> 3  :  True\n",
-      "2  :  True\n",
-      "-----> 3  :  True\n",
-      "3  :  True\n",
-      "-----> 4  :  False\n",
-      "-----> 5  :  False\n",
-      "\n",
-      "Path avaible between:  2  and  5\n"
+      "Path does not exist between:  2  and  4\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,13 +146,13 @@
     "\n",
     "test_graph.add(1, [2,3]) \n",
     "test_graph.add(3, [4,5]) \n",
-    "test_graph.add(2, [3]) \n",
+    "# test_graph.add(2, [3]) \n",
     "\n",
     "\n",
     "# test_graph.print_graph()\n",
     "print()\n",
     "\n",
-    "test_graph.breadth_first_search(2,5)"
+    "test_graph.breadth_first_search(2,4)"
    ]
   },
   {
@@ -173,6 +161,178 @@
    "source": [
     "## Notes\n",
     "### Discuss trade offs between breadth-first and depth first, bread-first will be able to find shortest path and can potentially find the end faster since depth first could go very deep down a neighbor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4.2 Minimal Tree: Not Correct\n",
+    "Given a sorted (increasing order) array with unique integer elements, write an algorithm to create a binary search tree with minimal height."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self,value):\n",
+    "        self.value = value\n",
+    "        self.left = None\n",
+    "        self.right = None \n",
+    "  \n",
+    "    def insert(self,root,node):\n",
+    "\n",
+    "        if root is None:\n",
+    "            root = node\n",
+    "        else:\n",
+    "            if node.value > root.value:\n",
+    "                if root.right is None:\n",
+    "                    root.right = node\n",
+    "                else:\n",
+    "                    insert(root.right,node)\n",
+    "            else:\n",
+    "                if root.left is None:\n",
+    "                    root.left = node\n",
+    "                else:\n",
+    "                    insert(root.left,node)\n",
+    "                    \n",
+    "    def printTree(self):\n",
+    "        if self.left:\n",
+    "            print(\"Left\")\n",
+    "            self.left.printTree()\n",
+    "        else:\n",
+    "            print(\"End\")\n",
+    "        \n",
+    "        print(self.value)\n",
+    "        \n",
+    "        \n",
+    "        if self.right:\n",
+    "            print(\"Right\")\n",
+    "            self.right.printTree()\n",
+    "        else:\n",
+    "            print(\"End\")\n",
+    "            \n",
+    "    def __str__(self):\n",
+    "        string = \"(\" + str(self.value)\n",
+    "        if self.left:  string += \"Left\"+str(self.left)\n",
+    "        else:          string += \".\"\n",
+    "        if self.right: string += \"Right\"+str(self.right)\n",
+    "        else:          string += \".\"\n",
+    "        return string + \")\"\n",
+    "\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "        \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(5Left(1.Right(2.Right(3.Right(4..))))Right(6.Right(7.Right(8.Right(9..)))))'"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_list = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "middle_element = sorted_list.pop(len(sorted_list) // 2)\n",
+    "root = Node(middle_element)\n",
+    "\n",
+    "for element in sorted_list:\n",
+    "    node = Node(element)\n",
+    "    root.insert(root,node)\n",
+    "\n",
+    "\n",
+    "str(root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correct = (5(3(2(1..).)(4..))(8(7(6..).)(9..)))\n",
+    "\n",
+    "\n",
+    "My Answer = (5(1.(2.(3.(4..))))(6.(7.(8.(9..)))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correct Answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def minimal_height_bst(sorted_array):\n",
+    "    if len(sorted_array) == 0:\n",
+    "        return None\n",
+    "    middle = len(sorted_array) // 2\n",
+    "    left  = minimal_height_bst(sorted_array[:middle])\n",
+    "    right = minimal_height_bst(sorted_array[(middle+1):])\n",
+    "    \n",
+    "    return BSTNode(sorted_array[middle], left, right)\n",
+    "\n",
+    "class BSTNode():\n",
+    "    def __init__(self, data=None, left=None, right=None):\n",
+    "        self.data, self.left, self.right = data, left, right\n",
+    "\n",
+    "\n",
+    "    def __str__(self):\n",
+    "\n",
+    "        string = \"(\" + str(self.data)\n",
+    "        if self.left:  string += \"Left\"+str(self.left)\n",
+    "        else:          string += \".\"\n",
+    "        if self.right: string += \"Right\"+str(self.right)\n",
+    "        else:          string += \".\"\n",
+    "        return string + \")\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(5Left(3Left(2Left(1..).)Right(4..))Right(8Left(7Left(6..).)Right(9..)))'"
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_list = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "bst = minimal_height_bst(sorted_list)\n",
+    "\n",
+    "str(bst)\n",
+    "\n"
    ]
   },
   {
