--- a/Data Structures/Binary Search Tree.ipynb
+++ b/Data Structures/Binary Search Tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,15 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14 is found\n",
       "3\n",
+      "4\n",
       "6\n",
       "12\n",
       "14\n"
@@ -79,8 +79,9 @@
     "root.insert(6)\n",
     "root.insert(14)\n",
     "root.insert(3)\n",
+    "root.insert(4)\n",
     "\n",
-    "root.find(14)\n",
+    "# root.find(14)\n",
     "root.PrintTree()"
    ]
   },
